# VulkanPathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
data/models/: CornellBox-Original.gltf
data/models/sponza/: Sponza.gltf
data/shaders/: anyhit.rahit  anyhit.rahit.spv  closesthit.rchit  closesthit.rchit.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
data/shaders/includes/: geometry.glsl  geometryTypes.glsl  material.glsl  random.glsl  raypayload.glsl  ubo.glsl
src/: CMakeLists.txt  main.cpp  main.h
src/classes/: AccelerationStructure.cpp  AccelerationStructure.h  ScratchBuffer.cpp  ScratchBuffer.h  ShaderBindingTable.cpp  ShaderBindingTable.h  StorageImage.cpp  StorageImage.h  VulkanApplication.cpp  VulkanApplication.h  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.h  VulkanInitializers.hpp  VulkanSwapChain.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h
